Test input changes and so on

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,5 @@
 <resources>
     <string name="app_name">Hangman_1</string>
+    <string name="button_guess">Guess!</string>
+    <string name="input_letter">Letter</string>
 </resources>
